--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
     "description": "Encode and decode quoted-printable strings according to rfc2045",
     "main": "lib/libqp.js",
     "scripts": {
-        "test": "node --test test/"
+        "test": "node --test test/",
+        "update": "rm -rf node_modules package-lock.json && ncu -u && npm install"
     },
     "repository": {
         "type": "git",
-        "url": "git://github.com/andris9/libqp.git"
+        "url": "git://github.com/nodemailer/libqp.git"
     },
     "keywords": [
         "quoted-printable",
@@ -17,11 +18,11 @@
     "author": "Andris Reinman",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/andris9/libqp/issues"
+        "url": "https://github.com/nodemailer/libqp/issues"
     },
-    "homepage": "https://github.com/andris9/libqp",
+    "homepage": "https://github.com/nodemailer/libqp",
     "devDependencies": {
         "eslint-config-nodemailer": "1.2.0",
-        "eslint-config-prettier": "8.5.0"
+        "eslint-config-prettier": "9.1.0"
     }
 }
