--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Encode and decode quoted-printable strings according to rfc2045",
     "main": "lib/libqp.js",
     "scripts": {
-        "test": "node --test test/",
+        "test": "node --test test/**/*-test.js",
         "update": "rm -rf node_modules package-lock.json && ncu -u && npm install"
     },
     "repository": {
